kube/deploy.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: shows
  namespace: deckhub
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: shows
    spec:
      containers:
      - image: deckhub/shows:1.0.0-alpha1
        imagePullPolicy: Always
        name: shows
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: shows
  namespace: deckhub
spec:
  ports:
  - port: 80
    protocol: TCP
    name: http
  selector:
    app: shows
  sessionAffinity: ClientIP
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: shows
  namespace: deckhub
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: deckhub.app
    http:
      paths:
      - path: /shows
        backend:
          serviceName: shows
          servicePort: 80
